--- a/Setupu0.plist
+++ b/Setupu0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/file/d/1ac7CdcdPrk-IKWl9sXMwukMYmfT3x5Iv/view?usp=sharing</string>
+					<string>https://github.com/dora2-iOS/KOKESHIDOLL_PUBLIC/releases/download/1.0/kok3shi_v1.0b2.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
