--- a/SetupU0.plist
+++ b/SetupU0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/file/d/15-v6J4-laG-Kfk_ngmEfPCa6K1HJOuPW/view?usp=sharing</string>
+					<string>https://drive.google.com/u/0/uc?export=download&confirm=AeuT&id=1cOlCvmLIaSKqqX1rsufAt571LIGq5X8n</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>signedu0</string>
+				<string>phoenixJB</string>
 			</dict>
 		</dict>
 	</array>
