--- a/SetupU0.plist
+++ b/SetupU0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/u/0/uc?export=download&confirm=AeuT&id=1cOlCvmLIaSKqqX1rsufAt571LIGq5X8n</string>
+					<string>https://github.com/IJustNeedOffsets/InstallerID/blob/main/Phoenix6.ipa?raw=true</string>
 				</dict>
 			</array>
 			<key>metadata</key>
