--- a/SetupU0.plist
+++ b/SetupU0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IJustNeedOffsets/InstallerID/blob/main/Phoenix6.ipa?raw=true</string>
+					<string>https://github.com/IJustNeedOffsets/InstallerID/raw/main/Payload.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
